[package]
name = "music163Download"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json", "cookies"] }
serde_json = "1.0.132"
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
simple_logger = "5.0.0"
log = "0.4.22"
aria2-rs = "0.2.1"